# breast_cancer_agents_paper

./: .gitignore  CITATION.cff  README.md  agent_definitions.yaml  custom_error_handlers.py  data_models.py  dataset.py  dvc.yaml  estimated_costs.md  evaluator.py  generate_rubrics.py  logs.py  mcp_utils.py  plots.py  prepare_case_summaries.py  prompt_helpers.py  pyproject.toml  run_eval.py  run_eval_dataset_eda.py  run_inference.py
assets/: decomposed_scores.tex
custom_mcps/pubmed_search/: pubmed_client.py  server.py
custom_tools/: parallel_ai.py
experiments/: divide_and_conquer.yaml  divide_and_conquer_with_fact_checker.yaml  divide_and_conquer_with_subagents_auto_spawning.yaml  single_llm_with_pubmed_search.yaml  single_llm_with_pubmed_search_and_full_pmc_articles.yaml  single_llm_with_web_search.yaml  single_llm_zero_shot.yaml
pipelines/: __init__.py  base_class.py  divide_and_conquer.py  divide_and_conquer_with_fact_checker.py  divide_and_conquer_with_subagents_auto_spawning.py  single_llm_with_pubmed_search.py  single_llm_with_pubmed_search_and_full_pmc_articles.py  single_llm_with_web_search.py  single_llm_zero_shot.py
