[project]
name = "research-agentic-tumor-board-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiolimiter>=1.2.1",
    "dvc>=3.67.1",
    "google-genai>=2.7.0",
    "griffe>=2.0.2",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "jsonlines>=4.0.0",
    "matplotlib>=3.10.9",
    "openai-agents[litellm]>=0.2.10",
    "pandas>=2.3.2",
    "parallel-web>=1.1.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.1",
    "tqdm>=4.67.1",
]
